added error and multiply

--- a/index.html
+++ b/index.html
@@ -21,13 +21,16 @@
                 <form action="#">
                     <label for="prime-one">p</label>
                     <input id="prime-one" type="text" name="">
+                    <p id="perror" class="error"></p>
                     <label for="prime-two">q</label>
                     <input id="prime-two" type="text" name="">
-                    <button>Multiply</button>
+                    <p id="qerror" class="error"></p>
+                    <button id="prime-submit">Multiply</button>
                 </form>
-                <p>p * q = <span class='n'>?</span>
+                <p>n = p * q = <span class='n' id='n'>?</span>
             </div>
             
         </div>
+        <script src='resources/js/main.js'></script>
     </body>
 </html>
