generates coprimes as a button

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
             <div class="step-three">
                 <h2>Find k</h2>
                 <p>k is co-prime to z (z is not divisible by k)</p>
-                <p>Need to generate a list of prime numbers less than z = <span class='z'>?</span></p>
+                <button id="coprimes">Generate co-primes</button>
+                <p> Need to generate a list of prime numbers less than z = <span class='z'>?</span></p>
+                <div id="coprimes-list"></div>
                 
             </div>
             <div class="step-four">
