generates secret key

--- a/index.html
+++ b/index.html
@@ -56,7 +56,12 @@
             <div class="step-five">
                 <h2>Server needs to generate private key</h2>
                 <p>k * j = 1 mod z</p>
-                <p><span class="k">?</span> * <span class="j">?</span> = 1 mod <span class="z">?</span></p>
+                <p><span class="k">?</span> * <span class="j">j</span> = 1 mod <span class="z">?</span></p>
+                <p><span class="k">?</span> * <span class="j">j</span> / <span class="z">?</span> = ? with remainder 1</p>
+                <p>We need a j such that the remainder is 1</p>
+                <button id='secret-key'>Generate secret key</button>
+
+
             </div>
             
         </div>
