added test and encryption

--- a/index.html
+++ b/index.html
@@ -68,6 +68,20 @@
             
             <div class="step-six">
                 <h2>Encrypting Message</h2>
+                <p>P ^ k = E mod n</p>
+                <p>
+                    <span class="P">?</span> ^
+                    <span class="k">?</span> =
+                    <span class="E">?</span> mod
+                    <span class="n">?</span>
+                </p>
+                <p>P = <span class="P">?</span> = plain message</p>
+                <p>E = <span class="E">?</span> = encrypted message</p>
+                <form action="">
+                    <label for="P">Enter a message</label>
+                    <input id="P" type="text">
+                    <button id="encryptBtn">Encrypt!</button>
+                </form>
             </div>
         </div>
         <script src='resources/js/main.js'></script>
